[package]
name = "portal-pc-koffle"
version = "0.0.2"
edition = "2021"
license = "MPL-2.0"
description = "Krazy things with WAFFLE"

[dependencies]
anyhow = "1.0.95"
modinverse = "0.1.1"
once_map = "0.4.21"
portal-pc-waffle = "0.3.8"
rand = "0.9.0"
stacker = "0.1.19"
waffle-ast = "0.4.3"

[features]
corpack=[]
